hphp/test/zend/bad/ext/intl/tests/dateformat_formatObject_calendar.php.skipif
<?php
if (!extension_loaded('intl')) die('skip intl extension not enabled'); ?>
<?php if (version_compare(INTL_ICU_VERSION, '51.2') >=  0) die('skip for ICU < 51.2'); ?>